# gemini-voice-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  gemini_live.py  main.py  schemas.py  settings.py  tools.py
scripts/: generate_voice_samples.py
static/: app.js  index.html  styles.css
tests/: __init__.py  test_app.py  test_gemini_live.py  test_schemas.py  test_settings.py  test_tools.py
