[project]
name = "gemini-voice-agent-rifo"
version = "0.1.0"
description = "Local Gemini Live voice agent prototype for Rifo Traveling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
